Fix nav flickering

--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ body {
     width: 32px;
     height: 32px;
     stroke-width: 1.75;
+    stroke: var(--wp--preset--color--dark-links);
     line-height: 1;
     vertical-align: middle;
     display: inline-block;
@@ -115,7 +116,7 @@ body {
     font-size: 16px;
     font-weight: normal;
     color: var(--wp--preset--color--light-text);
-    background: var(--wp--preset--color--dark-titles);
+    background: var(--wp--preset--color--dark-links);
     line-height: 1em;
     padding: 4px 8px;
     border-radius: 2px;
